# box2c

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  renderdoc.cap  vcpkg.json
.github/workflows/: build.yml
benchmark/: CMakeLists.txt  benchmark_pyramids.c  benchmark_results.html  joint_grid.c  large_pyramid.c  main.c  many_pyramids.c  smash.c  tumbler.c
benchmark/amd7950x/: joint_grid.csv  large_pyramid.csv  many_pyramids.csv  smash.csv  tumbler.csv
benchmark/m2air/: joint_grid.csv  large_pyramid.csv  many_pyramids.csv  smash.csv  tumbler.csv
docs/: CMakeLists.txt  FAQ.md  base.md  collision.md  common.md  dynamics.md  foundation.md  hello.md  layout.xml  loose_ends.md  migration.md  overview.md  samples.md  simulation.md  testbed.md
include/box2d/: aabb.h  allocate.h  api.h  base.h  box2d.h  callbacks.h  collision.h  color.h  constants.h  debug_draw.h  distance.h  draw.h  dynamic_tree.h  event_types.h  geometry.h  hull.h  id.h  joint_types.h  joint_util.h  manifold.h  math.h  math_cpp.h  math_functions.h  math_types.h  shape.h  shapes.h  timer.h  types.h  vec_math.h
samples/: CMakeLists.txt  car.cpp  car.h  donut.cpp  donut.h  doohickey.cpp  doohickey.h  draw.cpp  draw.h  human.cpp  human.h  main.cpp  sample.cpp  sample.h  sample_benchmark.cpp  sample_bodies.cpp  sample_collision.cpp  sample_continuous.cpp  sample_demo.cpp  sample_events.cpp  sample_geometry.cpp  sample_joints.cpp  sample_robustness.cpp  sample_shapes.cpp  sample_stacking.cpp  sample_tootbird.cpp  sample_world.cpp  settings.cpp  settings.h  shader.cpp  shader.h  shape_cast.cpp
samples/collection/: behavior.cpp  benchmark.cpp  benchmark_barrel.cpp  benchmark_boxes.cpp  benchmark_create_destroy.cpp  benchmark_joint_grid.cpp  benchmark_many_tumblers.cpp  benchmark_pyramid.cpp  benchmark_revolute.cpp  benchmark_tumbler.cpp  convex_hull.cpp  donut.cpp  donut.h  dynamic_tree.cpp  human.cpp  human.h  manifold.cpp  ray_cast.cpp  sample_bodies.cpp  sample_continuous.cpp  sample_continuous1.cpp  sample_distance.cpp  sample_dynamic_tree.cpp  sample_events.cpp  sample_hull.cpp  sample_joints.cpp  sample_manifold.cpp  sample_ray_cast.cpp  sample_restitution.cpp  sample_revolute_joint.cpp  sample_robustness.cpp  sample_shape_cast.cpp  sample_shapes.cpp  sample_stacking.cpp  sample_tilted_stacks.cpp  sample_time_of_impact.cpp  sample_vertical_stack.cpp  shape_cast.cpp  time_of_impact.cpp
samples/data/: capsule.fs  capsule.vs  circle.fs  circle.vs  solid_capsule.fs  solid_capsule.vs  solid_circle.fs  solid_circle.vs  solid_polygon.fs  solid_polygon.vs
scaling_test/: CMakeLists.txt  main.c  timer.c  timer.h
src/: CMakeLists.txt  aabb.c  aabb.h  allocate.c  allocate.h  arena_allocator.c  array.c  array.h  atomic.inl  base_body.c  base_body.h  bitset.c  bitset.h  bitset.inl  block_allocator.c  block_allocator.h  block_array.c  block_array.h  body.c  body.h  broad_phase.c  broad_phase.h  chain_shape.h  collision.c  constraint_graph.c  constraint_graph.h  contact.c  contact.h  contact_list.h  contact_solver.c  contact_solver.h  contact_solver2.c  contact_solver2.h  contact_sorter.cpp  core.c  core.h  ctz.h  distance.c  distance_joint.c  dynamic_tree.c  (+54 more)
test/: CMakeLists.txt  collision_test.c  distance_test.c  hello_world.c  main.c  math_test.c  shape_test.c  test_allocator.c  test_bitset.c  test_collision.c  test_determinism.c  test_distance.c  test_macros.h  test_math.c  test_shape.c  test_table.c  test_world.c
